@@ -94,6 +94,7 @@ public class TestMysqlEventListener
             Optional.of(ofMillis(112)),
             Optional.of(ofMillis(113)),
             Optional.of(ofMillis(114)),
+            Optional.of(ofMillis(115)),
             115L,
             116L,
             117L,
@@ -120,7 +121,7 @@ public class TestMysqlEventListener
             // not stored
             Collections.emptyList(),
             // not stored
-            Collections.emptyList(),
+            List.of("{operator: \"operator1\"}", "{operator: \"operator2\"}"),
             // not stored
             Optional.empty());
 
@@ -240,6 +241,7 @@ public class TestMysqlEventListener
             Optional.empty(),
             Optional.empty(),
             Optional.empty(),
+            Optional.empty(),
             115L,
             116L,
             117L,
@@ -265,7 +267,6 @@ public class TestMysqlEventListener
             Collections.emptyList(),
             // not stored
             Collections.emptyList(),
-            // not stored
             Collections.emptyList(),
             // not stored
             Optional.empty());
@@ -402,6 +403,7 @@ public class TestMysqlEventListener
                     assertEquals(resultSet.getLong("failed_input_blocked_time_millis"), 112);
                     assertEquals(resultSet.getLong("output_blocked_time_millis"), 113);
                     assertEquals(resultSet.getLong("failed_output_blocked_time_millis"), 114);
+                    assertEquals(resultSet.getLong("physical_input_read_time_millis"), 115);
                     assertEquals(resultSet.getLong("peak_memory_bytes"), 115);
                     assertEquals(resultSet.getLong("peak_task_memory_bytes"), 117);
                     assertEquals(resultSet.getLong("physical_input_bytes"), 118);
@@ -418,6 +420,7 @@ public class TestMysqlEventListener
                     assertEquals(resultSet.getDouble("failed_cumulative_memory"), 129.0);
                     assertEquals(resultSet.getLong("completed_splits"), 130);
                     assertEquals(resultSet.getString("retry_policy"), "TASK");
+                    assertEquals(resultSet.getString("operator_summaries_json"), "[{operator: \"operator1\"},{operator: \"operator2\"}]");
                     assertFalse(resultSet.next());
                 }
             }
@@ -483,6 +486,7 @@ public class TestMysqlEventListener
                     assertEquals(resultSet.getLong("failed_input_blocked_time_millis"), 0);
                     assertEquals(resultSet.getLong("output_blocked_time_millis"), 0);
                     assertEquals(resultSet.getLong("failed_output_blocked_time_millis"), 0);
+                    assertEquals(resultSet.getLong("physical_input_read_time_millis"), 0);
                     assertEquals(resultSet.getLong("peak_memory_bytes"), 115);
                     assertEquals(resultSet.getLong("peak_task_memory_bytes"), 117);
                     assertEquals(resultSet.getLong("physical_input_bytes"), 118);
@@ -499,6 +503,7 @@ public class TestMysqlEventListener
                     assertEquals(resultSet.getDouble("failed_cumulative_memory"), 129.0);
                     assertEquals(resultSet.getLong("completed_splits"), 130);
                     assertEquals(resultSet.getString("retry_policy"), "NONE");
+                    assertEquals(resultSet.getString("operator_summaries_json"), "[]");
                     assertFalse(resultSet.next());
                 }
             }
